src/main/java/semantic/abstractSintaxTree/test/failing/typeErrorIfCondition.ru
/? ParameterTypeMismatchException
start{
    Int a;
    Str b;

    if (b) {
        (IO.out_int(a));
    }
}